--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Shooting ❤️❤️❤️</title>
+  <title>Gửi đến Lâm Nữ Tuyết Như</title>
   <link rel="stylesheet" href="./style/style.css">
 </head>
 <body>
   <canvas id="canvas"></canvas>
   <div id="rotateNotice" style="display:none;">
     <div class="overlay">
-      <p>Vui lòng xoay màn hình sang ngang để có trải nghiệm tốt nhất 🌟</p>
+      <p>Hãy Quay Điện Thoại Ngang Lại Em Nhé</p>
     </div>
   </div>
 
